--- a/src/components/Product.css
+++ b/src/components/Product.css
@@ -1,6 +1,6 @@
 .form-wrapper {
-    background: linear-gradient(145deg, #ffffff, #e6e6e6);
-    box-shadow: 20px 20px 60px #d9d9d9, -20px -20px 60px #ffffff;
+    /*background: linear-gradient(145deg, #ffffff, #e6e6e6);*/
+    /*box-shadow: 20px 20px 60px #d9d9d9, -20px -20px 60px #ffffff;*/
     border-radius: 15px;
     padding: 20px;
     transform: perspective(1000px);
@@ -17,17 +17,11 @@
   }
   
   .form-input, .form-select, .form-textarea {
-    background: #f0f0f0;
-    box-shadow: inset 5px 5px 10px #d9d9d9, inset -5px -5px 10px #ffffff;
-    border: none;
+    background: white;
+    border: 1px rgb(209 213 219 0.5);
     padding: 10px;
-    border-radius: 10px;
+    border-radius: 8px;
     font-size: 16px;
-  }
-  
-  .form-input:focus, .form-select:focus, .form-textarea:focus {
-    outline: none;
-    box-shadow: inset 5px 5px 10px #d9d9d9, inset -5px -5px 10px #ffffff, 0 0 10px rgba(0, 0, 255, 0.5);
   }
   
   .submit-button {
