--- a/src/App.css
+++ b/src/App.css
@@ -154,7 +154,8 @@ input[type=number] {
       background-position: center;
       background-repeat: no-repeat;
    }
-   .bill{
+
+   .bill {
       margin-top: 28px;
       padding-bottom: 10px;
    }
@@ -214,8 +215,18 @@ input[type=number] {
    overflow-y: auto;
 }
 
-.beta{
+.beta {
    font-size: 10px;
    top: 5px;
    right: 4px;
+}
+
+.product_table {
+   padding-left: 20px;
+}
+
+@media (max-width: 768) {
+   .product_table {
+      padding-left: 0px;
+   }
 }
