--- a/src/components/Product.css
+++ b/src/components/Product.css
@@ -1,8 +1,6 @@
 .form-wrapper {
-    /*background: linear-gradient(145deg, #ffffff, #e6e6e6);*/
-    /*box-shadow: 20px 20px 60px #d9d9d9, -20px -20px 60px #ffffff;*/
     border-radius: 15px;
-    padding: 20px;
+    /*padding: 20px;*/
     transform: perspective(1000px);
     transform-style: preserve-3d;
   }
@@ -32,4 +30,5 @@
   .submit-button:hover {
     transform: translateY(-2px);
   }
+
   
